@@ -1,8 +1,9 @@
 # Changelog
 
 * v1.11 (TBD)
-  - New Checks:
-    - use-arrow-operator-instead-of-data
+    - New Checks:
+      - use-arrow-operator-instead-of-data
+      - use-static-qregularexpression
 
 * v1.10 (July 20th 2021)
    - Requires C++17
